--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "Samsung >= 5"
   ],
   "dependencies": {
+    "axios": "^0.21.1",
     "dom7": "^3.0.0",
     "framework7": "^6.0.4",
     "framework7-icons": "^3.0.1",
